<resources>
    <string name="app_name">拼车</string>

    <string name="account_username_hint">请输入用户名</string>
    <string name="account_phone_error">手机号不正确</string>
    <string name="account_email_error">邮箱不正确</string>
    <string name="account_password_hint">请输入密码</string>
    <string name="account_password_old">请输入旧密码</string>
    <string name="account_password_new">请输入新密码</string>
    <string name="account_password_new2">请再输入新密码</string>
    <string name="account_password_hint2">请再输入密码</string>
    <string name="account_password_6_14">请输入6-14位的密码</string>
    <string name="account_password_different">两次输入的密码不一致</string>
    <string name="account_set_password_please">请设置密码</string>
    <string name="account_password_modify">修改密码</string>
    <string name="account_login">登录</string>
    <string name="account_register">注册</string>
    <string name="account_login_success">登录成功</string>
    <string name="account_register_success">注册成功</string>
    <string name="account_check_update">检查更新</string>
    <string name="account_about">关于</string>
    <string name="account_feedback">意见反馈</string>
    <string name="account_feedback_type">意见类型</string>
    <string name="account_feedback_limit">请提出您的意见或建议，帮助我们不断改进。</string>
    <string name="account_notice">*您的意见对我们来说至关重要，我们将不断优化体验</string>
    <string name="account_submit">提交</string>
    <string name="account_feedback_6">请输入6字以上的意见或建议</string>
    <string name="account_feedback_contacts">请填写你的邮箱或手机号</string>
    <string name="account_feedback_contacts_error">请正确填写你的邮箱或手机号</string>
    <string name="account_feedback_succeed">提交成功，感谢你的反馈</string>
    <string name="account_contacts">联系作者：</string>
    <string name="account_qq">819761135@qq.com</string>

    <string name="capture_camera_failed">Camera disabled</string>
    <string name="capture_hint">Put the qrcode in frame</string>
    <string name="capture_flash">flash</string>
    <string name="capture_back">back</string>
    <string name="capture_title">QRCode Scanner</string>
    <string name="capture_album">album</string>
    <string name="capture_decode_failed">No QRCode found</string>
    <string name="capture_decode_result_title">Scan Result</string>
    <string name="capture_decode_result_open">Open</string>
    <string name="capture_decode_result_copy">Copy</string>
    <string name="capture_decode_result_copy_hint">Already copy!</string>
    <string name="stat_address_input">点击输入出发地址</string>
    <string name="end_address_input">点击输入目的地址</string>
    <string name="time_input">点击选择出发时间</string>
    <string name="mark_input">点击输入备注</string>
    <string name="phone_input">点击输入电话号码</string>
    <string name="email_input">点击输入邮件地址</string>
    <string name="data_none">暂无数据</string>
    <string name="riding_add">添加乘车信息</string>
    <string name="passenger_add">添加乘客</string>
    <string name="passenger_take_count">已载 %1$d 人</string>
    <string name="name_empty">名字不能为空</string>
    <string name="sex_empty">请选择性别</string>
    <string name="start_address_empty">出发地址不能为空</string>
    <string name="end_address_empty">目的地址不能为空</string>
    <string name="phone_empty">请输入有效的电话号码</string>
    <string name="unkonw_error">未知错误</string>
    <string name="go_off_empty">出发时间不能为空</string>
    <string name="riding_count_empty">载客人数不能为空</string>
    <string name="price_empty">价格不能为空</string>
    <string name="passenger_empty">暂无乘客，请添加！</string>
    <string name="riding_add_succeed">添加乘车成功</string>
    <string name="riding_update_succeed">更新乘车成功</string>
    <string name="usual_address">常用地址</string>
    <string name="time_select">选择时间</string>
    <string name="carry_add_succeed">添加车源成功</string>
    <string name="carry_update_succeed">更新车源成功</string>
    <string name="contacts">通讯录</string>
    <string name="black_list">黑名单</string>
    <string name="black_list_share">共享黑名单</string>
    <string name="card_text">我的文本</string>
    <string name="card_image">我的名片</string>
    <string name="card_add">添加名片</string>
    <string name="scan">扫二维码</string>
    <string name="logout">注销</string>
    <string name="mine">我的</string>
    <string name="passenger">乘客</string>
    <string name="passenger_setting">乘客设置</string>
    <string name="by_count">已乘%1$d次</string>
    <string name="blacklist_sign_count">被标记%1$d次</string>
    <string name="card_content_input">请输入名片内容</string>
    <string name="pick_share_method">选择分享方式</string>

    <string name="qr_code">我的二维码</string>
    <string name="car_submit">发布车源</string>
    <string name="select_what_you_do">请选择你要执行的操作</string>
    <string name="blacklist">黑名单</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="sure">确定</string>
    <string name="blacklist_add_succeed">已加入黑名单</string>
    <string name="delete_succeed">删除成功</string>
    <string name="car_submit_none">你还未发布车源信息</string>
    <string name="carry_finish_query">确定要完成该车源吗？</string>
    <string name="save">保存</string>
    <string name="unknow_error">未知错误</string>
    <string name="userinfo_update_succeed">更新用户信息成功</string>
    <string name="account_userinfo_edit">编辑个人信息</string>

</resources>
