<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/common_title"/>

    <View
        style="@style/divider_line_1px"
        android:layout_marginTop="@dimen/padding_m"/>

    <cool.eye.ridding.login.support.PasswordEditText
        android:id="@+id/reset_password_old"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/ic_zhanghutixi_user"
        android:drawablePadding="@dimen/padding_m"
        android:hint="@string/account_password_old"
        android:inputType="phone"
        android:paddingLeft="@dimen/padding_m"
        android:paddingRight="@dimen/padding_m"
        app:clipParentPadding="true"
        app:division="true"
        app:gravity="right|center_vertical"
        app:hideDrawable="@drawable/ic_zhanghutixi_visible"
        app:padding="@dimen/margin"
        app:showDrawable="@drawable/ic_zhanghutixi_visible_on"/>

    <View
        style="@style/divider_line_1px"/>

    <cool.eye.ridding.login.support.PasswordEditText
        android:id="@+id/reset_password_new"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/ic_set_password"
        android:drawablePadding="@dimen/padding_m"
        android:hint="@string/account_password_new"
        android:imeOptions="actionNext"
        android:inputType="phone"
        android:minHeight="44dp"
        android:paddingLeft="@dimen/padding_m"
        android:paddingRight="@dimen/padding_m"
        app:clipParentPadding="true"
        app:division="true"
        app:gravity="right|center_vertical"
        app:hideDrawable="@drawable/ic_zhanghutixi_visible"
        app:padding="@dimen/margin"
        app:showDrawable="@drawable/ic_zhanghutixi_visible_on"/>

    <View
        style="@style/divider_line_1px"/>

    <cool.eye.ridding.login.support.PasswordEditText
        android:id="@+id/reset_password_new2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:drawableLeft="@drawable/ic_zhanghutixi_lock"
        android:drawablePadding="@dimen/padding_m"
        android:hint="@string/account_password_new2"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:minHeight="44dp"
        android:paddingLeft="@dimen/padding_m"
        android:paddingRight="@dimen/padding_m"
        app:clipParentPadding="true"
        app:division="true"
        app:gravity="right|center_vertical"
        app:hideDrawable="@drawable/ic_zhanghutixi_visible"
        app:padding="@dimen/margin"
        app:showDrawable="@drawable/ic_zhanghutixi_visible_on"/>

    <View
        style="@style/divider_line_1px"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_reset_password"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_btn_border_green"
        android:paddingLeft="@dimen/margin_large"
        android:paddingRight="@dimen/margin_large"
        android:text="@string/account_password_modify"
        android:textColor="@color/selector_white_text"/>
</LinearLayout>